--- a/src/app/layouts/dashboard/dashboard.component.scss
+++ b/src/app/layouts/dashboard/dashboard.component.scss
@@ -29,3 +29,8 @@ a.mat-list-item {
 .texto-inicio {
   vertical-align: middle; /* Alinea verticalmente con el ícono */
 }
+
+.mat-toolbar {
+  background-color: black; /* Establece el fondo negro */
+  color: #f1666b; /* Establece el color de texto */
+}
