--- a/src/app/layouts/dashboard/pages/users/components/user-dialog/user-dialog.component.html
+++ b/src/app/layouts/dashboard/pages/users/components/user-dialog/user-dialog.component.html
@@ -34,12 +34,23 @@
           }}</mat-error>
         </mat-form-field>
       </div>
+      <div class="col-8">
+        <mat-form-field class="w-100 p-2" appearance="fill">
+          <mat-label>Sanciones</mat-label>
+          <input formControlName="sanciones" matInput />
+          <mat-error>{{
+            userForm.get("sanciones")?.errors | formFieldValidationErrors
+          }}</mat-error>
+        </mat-form-field>
+      </div>
       <div class="col-4">
         <mat-form-field class="w-100 p-2" appearance="fill">
           <mat-label>Role</mat-label>
           <mat-select formControlName="role">
             <mat-option value="ADMIN">ADMIN</mat-option>
             <mat-option value="USER">USER</mat-option>
+            <mat-option value="PROFESOR">PROFESOR</mat-option>
+            <mat-option value="ESTUDIANTE">ESTUDIANTE</mat-option>
           </mat-select>
         </mat-form-field>
       </div>
