--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -27,8 +27,6 @@
         <mat-icon>leaderboard</mat-icon>
         <span>Ranking</span>
       </a>
-      
-
       <a (click)="logout()" mat-button class="menu-link">
         <mat-icon>exit_to_app</mat-icon>
         <span>Cerrar sesión</span>
@@ -41,26 +39,35 @@
   <div class="example-sidenav-content">
     <!-- TOOLBAR SUPERIOR -->
     <mat-toolbar color="primary">
-      <div class="d-flex justify-content-between align-items-center w-100">
-        <div>
-          <button
-            (click)="drawer.toggle()"
-            mat-icon-button
-            class="example-icon"
-            aria-label="Example icon-button with menu icon"
-          >
-            <mat-icon>menu</mat-icon>
-          </button>
-          <span>Academia GiriboneMaxiAcademy</span>
-        </div>
+  <div class="container-fluid">
+    <div class="row d-flex justify-content-between align-items-center w-50">
+      <div class="col-9">
+        <button
+          (click)="drawer.toggle()"
+          mat-icon-button
+          class="example-icon"
+          aria-label="Example icon-button with menu icon"
+        >
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span>GiriboneMaxi Academy </span>
+      </div>
+     
         <!-- ANGULAR 16-->
-        <div *ngIf="authUserSinPipe">{{ authUserSinPipe?.firstName }}</div>
+       
+        <!--<div  class="col-3" *ngIf="authUserSinPipe">{{ authUserSinPipe?.firstName }}</div>-->
         <!-- ANGULAR 17-->
         <!-- @if (authUser$ | async; as user) {
         <div>{{ user?.firstName }}</div>
+        
         } -->
+        <a routerLink="#" mat-button class="menu-link" style="display: flex; align-items: center;">
+          <mat-icon>account_circle</mat-icon>
+          <span *ngIf="authUserSinPipe" style="margin-left: 5px;">Hola  {{authUserSinPipe?.firstName }} Usted es un {{ authUserSinPipe?.role }}</span>
+        </a>
       </div>
-    </mat-toolbar>
+  </div>
+</mat-toolbar>
 
     <main style="padding: 1rem">
       <!-- <div>
