--- a/src/app/layouts/dashboard/pages/home/home.component.html
+++ b/src/app/layouts/dashboard/pages/home/home.component.html
@@ -1,41 +1,66 @@
-<div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h3>Bienvenido al centro de estudiantes de GiriboneMaxiAcademy</h3>
-        <!-- Contenido adicional aquí -->
-      </div>
-      <div class="col-md-6">
-        <h4>Reglamento Interno</h4>
-        <p>
-          1- Esta terminantemente prohibido incendiar los pupitres
-          <br>
-          <br>
-          2- No se puede, tirar tizas, ni zapatillas o algun objeto contundente a los profesores mientras
-          escriben en el pizarron
-          <br>
-          <br>
-          3- Esta terminantemente prohibo fumar en los baños escuchando Bob Marley
-          <br>
-          <br>
-          4- Los libros de las bibloteca son para leer, esta terminantemente prohibido
-          por cuestiones de higiene y de mantener la integridad de los mismos 
-          dormir sobre ellos.  
-          <br>
-          <br>
-          4- Los libros de las bibloteca son para leer, esta terminantemente prohibido
-          por cuestiones de higiene y de mantener la integridad de los mismos 
-          dormir sobre ellos.  
-          <br>
-          <br>
-          5- Cada Alumno cuenta con un limite de sanciones de un maximo de 50 amonestaciones,
-          <strong>aquellos alumnos que superen las 50 amonestaciones seran expulsados sin excepción
-            no comprometa al personal Liliana
-          </strong> 
-          <br>
-          Gracias, la Acedemia 
 
-          <!-- Más elementos de lista aquí -->
-        </p>
-      </div>
-    </div>
-  </div>
+<div>
+  <mat-card>
+    <mat-card-title>Bienvenidos a la Academia Giribone</mat-card-title>
+  </mat-card>
+</div>
+
+<div>
+  <mat-card>
+    <mat-card-content><h5>Nuestra Historia</h5>
+        <p>
+        Nuestra academia se remonta en los años -1499 A.C en Usuahia. 
+        <br>
+        Nuestro Mentor Giribone Maxi, no tuvo mejor idea, que estudiar 
+        con el fresco del sur y la vista de las montañas. Al principio 
+        el grado de discernimiento se debio a que muchos alumnos padecieron
+        Neumonia, pero con el tiempo los chicos se fueron haciendo duros, je,je...
+        <br>
+        <h6>Nuestro valores:</h6>
+        
+        Se caracteriza por lograr una educación de excelencia, mediante
+        el metodo "si no estudias hay tabla" fragmento de Gaspar 
+        sacado de la enciclopedia the simpson encarta '99, 
+        En casos mas complejos se trabaja, dejando de lado el couching, utilizando psico social, con electrochoques.
+        <br><br>
+        <h6>Metodo Evaluativo:</h6>
+        
+        En esta institucion se evalua lo que se predica. Se prioriza<br>
+        1-Compañerismo<br>
+        2-Trabajo en Equipo<br>
+        3-Empatia<br><br>
+        Aquellos que quieran sacar ventaja sobre los compañeros, se ganan un tour en musculosa <br>
+        a la Base Marambio. <br>
+        <br>
+        <h6>Equipo Pedagogico:</h6>
+        
+        Director: Giribone Maximiliano<br>
+        Secretario Academico<br>
+        Administrativo: Siempre es un quilombo<br>
+        Psicologo: Olle Julio Cesar<br>
+        Psiquiatra: Pasado Jose Raul<br>
+        Emprendedoras: Caro Pardiaco<br>
+        Comisario: Garrido Miguel Angel<br>
+        Taller de Dibujo: Comisario: Garrido Miguel Angel<br><br>
+
+        <h6>Cerificaciones:</h6>
+        
+        ISO 9001:2015: Sistemas de Gestión de Calidad (SGC)<br>
+        ISO 14001:2015:  Sistemas de Gestión Ambiental (SGA):<br>
+        ISO 27001:2013: Seguridad de la Información: <br>
+        ISO 45001:2018:  Sistemas de Gestión de Seguridad y Salud en el Trabajo (SGSST):<br>
+        Reposo: 72 horas por estado gripal (no sirve como certificado medico).<br>
+        <br>
+        <h6>Nos Auspician:</h6>
+
+        Farmacia: "La Perla" <br>
+        descuento del 50% en ansioliticos por abonar la cuota en efectivo<br>
+        descuento del 25% en antidepresivos por abonar la cuota en criptomonedas. Al jefe le va lo tech,  je<br>
+        Dietetica: "Salud y Bienestar"
+        descuento del 50% en Alfajores Guaymallen de Fruta<br>
+        <p>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+
