--- a/src/app/layouts/dashboard/pages/home/home.component.html
+++ b/src/app/layouts/dashboard/pages/home/home.component.html
@@ -37,22 +37,25 @@
         Director: Giribone Maximiliano<br>
         Secretario Academico<br>
         Administrativo: Siempre es un quilombo<br>
-        Psicologo: Olle Julio Cesar<br>
+        Psicologo: Oye Julio Cesar<br>
         Psiquiatra: Pasado Jose Raul<br>
         Emprendedoras: Caro Pardiaco<br>
         Comisario: Garrido Miguel Angel<br>
         Taller de Dibujo: Comisario: Garrido Miguel Angel<br><br>
 
-        <h6>Cerificaciones:</h6>
+        <h6>Cerificaciones y Avales</h6>
         
         ISO 9001:2015: Sistemas de Gestión de Calidad (SGC)<br>
         ISO 14001:2015:  Sistemas de Gestión Ambiental (SGA):<br>
         ISO 27001:2013: Seguridad de la Información: <br>
         ISO 45001:2018:  Sistemas de Gestión de Seguridad y Salud en el Trabajo (SGSST):<br>
         Reposo: 72 horas por estado gripal (no sirve como certificado medico).<br>
-        <br>
+        Garantia de Alquiler Depto 3 ambientes en Belgrano, Sacado por Finaer por 2 años<br>
+        Apollo incondicional, de Amigas y Amigos, Papa, Mamá,la tía Marta y Betun
+        <br><br>
         <h6>Nos Auspician:</h6>
-
+        Almacen: "Lo de Tito"
+        descuentos en fiambres y agua skins de coca cola los días Martes y Viernes de 8:00 a 9:45hs
         Farmacia: "La Perla" <br>
         descuento del 50% en ansioliticos por abonar la cuota en efectivo<br>
         descuento del 25% en antidepresivos por abonar la cuota en criptomonedas. Al jefe le va lo tech,  je<br>
