--- a/src/app/layouts/dashboard/pages/clase-10-rxjs-2/clase-10-rxjs-2.component.html
+++ b/src/app/layouts/dashboard/pages/clase-10-rxjs-2/clase-10-rxjs-2.component.html
@@ -1,5 +1,5 @@
 @if (cargando) {
-<div>Cargando... por favor espere...</div>
+<div>Holis Cargando... por favor espere...</div>
 } @else {
 <pre>{{ usuarios | json }}</pre>
 <pre>{{ roles | json }}</pre>
