--- a/src/app/layouts/dashboard/dashboard.component.scss
+++ b/src/app/layouts/dashboard/dashboard.component.scss
@@ -1,3 +1,4 @@
+
 .example-container {
   width: 100%;
   height: 100vh;
@@ -33,4 +34,8 @@ a.mat-list-item {
 .mat-toolbar {
   background-color: black; /* Establece el fondo negro */
   color: #f1666b; /* Establece el color de texto */
+}
+
+.matprimary{
+  color: #f1666b
 }
