--- a/src/app/layouts/dashboard/pages/users/users.component.html
+++ b/src/app/layouts/dashboard/pages/users/users.component.html
@@ -1,4 +1,4 @@
-<mat-spinner *ngIf="loading"></mat-spinner>
+<mat-spinner class="matspinner" *ngIf="loading"></mat-spinner>
 <ng-container *ngIf="!loading">
   <div class="d-flex justify-content-end mb-3">
     <button (click)="openDialog()" mat-button color="primary">
