--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
   >
     <mat-nav-list>
       <a mat-button class="menu-link" routerLink="/home">
-        <mat-icon>home</mat-icon>
+        <mat-icon>homee</mat-icon>
         <span>Inicio</span>
       </a>
       <a routerLink="users" mat-button class="menu-link">
